--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,590 +1,5 @@
-@import "variables";
-
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  font-size: 16px;
-  vertical-align: baseline;
-  text-decoration: none;
-  outline-style: none;
-}
-
-*:focus, *:visited, *:focus-within, *:focus-visible {
-  outline-style: none;
-  box-shadow: none;
-  border-color: transparent;
-}
-
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-ol,
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-strong {
-  font-size: 19px;
-  padding-right: 15px;
-  font-weight: bold;
-}
-
-*,
-::after,
-::before {
-  box-sizing: border-box;
-}
-
-/* Base */
-body {
-  margin: 0;
-  font-family: Roboto, sans-serif;
-  font-size: 0.875rem;
-  line-height: 1.5;
-  text-align: left;
-  background-color: white;
-  color: #333;
-}
-
-a {
-  color: #333;
-
-  &:visited {
-    color: inherit;
-  }
-}
-
-h1 {
-  font-size: 1.5rem;
-  font-weight: bold;
-  line-height: 1;
-
-  &.shrikhand {
-    font-family: Shrikhand, sans-serif;
-    padding: 20px 0 20px 20px;
-    font-weight: normal;
-  }
-}
-
-h2 {
-  display: block;
-  font-size: 1.25rem;
-  font-weight: bold;
-  margin: 0;
-  line-height: 1.2;
-}
-
-h3 {
-  font-size: 0.875rem;
-  font-weight: bold;
-}
-
-//Helper class
-.bg-grey {
-  background-color: $grey-color;
-}
-
-.full-width {
-  width: 100%;
-}
-
-.button1 {
-  display: inline-block;
-  padding: $btn-padding;
-  margin: 0 0.3em 0.3em 0;
-  border-radius: 25px;
-  box-sizing: border-box;
-  text-decoration: none;
-  text-align: center;
-  transition: all 0.2s;
-  background: $btn1-color;
-  color: #fff;
-  font-weight: bold;
-  box-shadow: 2px 2px 10px 2px #e0e0e0;
-  cursor: pointer;
-  border: none;
-  transform: scale(1);
-
-  &:hover {
-    box-shadow: $btn1-shadow-hover;
-    background: linear-gradient(lighten($secondary, 5), lighten($primary, 5));
-    transform: scale(1.05);
-  }
-
-}
-
-a.button1 {
-  color: #fff;
-}
-//Header section
-header {
-  display: flex;
-  max-width: $wrapper;
-  margin: auto;
-  flex-flow: wrap;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  padding-top: 10px;
-
-  .header-left {
-    width: 375px;
-  }
-
-  .search-location {
-    display: flex;
-    background-color: #eaeaea;
-    margin-bottom: 20px;
-
-    .icon-wrapper {
-      padding: 8px 10px;
-    }
-
-    .input-field {
-      flex: 1 0 0%;
-
-      input {
-        border: none;
-        background-color: transparent;
-        padding: 15px 10px;
-        width: 100%;
-      }
-    }
-  }
-
-  .back-btn {
-    position: absolute;
-    left: 20px;
-    top: 20px;
-    display: block;
-  }
-
-  .cover-img {
-    height: 270px;
-    width: 100%;
-    z-index: -1;
-
-    img {
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
-    }
-  }
-}
-
-//Main section
-main {
-  max-width: $wrapper;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  flex-wrap: wrap;
-
-}
-
-.menu main {
-  z-index: 999;
-  margin-top: -40px;
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
-}
-
-.reserve {
-  text-align: center;
-  padding: 30px 10px;
-  flex: 0 0 100%;
-
-  h1 {
-    font-weight: bold;
-    margin-bottom: 15px;
-  }
-
-  h2 {
-    color: #888;
-    font-weight: normal;
-  }
-
-  hgroup {
-    margin-bottom: 20px;
-  }
-
-
-}
-
-aside {
-  padding: 30px 10px;
-  flex: 0 0 100%;
-
-  h1 {
-    width: 100%;
-    margin-bottom: 10px;
-    margin-left: 5px;
-  }
-
-  .select {
-    display: flex;
-    flex-flow: nowrap;
-    flex-direction: row;
-    padding: 15px;
-    position: relative;
-    align-content: space-between;
-    width: 100%;
-  }
-
-  .step-button {
-    margin-bottom: 20px;
-    padding: 25px 15px;
-    background-color: $grey-color;
-    flex: 1 0 auto;
-    margin-right: 15px;
-    margin-left: 15px;
-    border-radius: 30px;
-    box-shadow: $btn1-shadow;
-    position: relative;
-
-
-    .circle-number {
-      background-color: $primary;
-      display: block;
-      position: absolute;
-      width: 25px;
-      height: 25px;
-      text-align: center;
-      border-radius: 100%;
-      color: white;
-      font-weight: bold;
-      left: -12px;
-      line-height: 1.67;
-    }
-
-    .icon {
-      margin: 0 15px;
-      min-width: 30px;
-      display: inline-block;
-
-      i {
-        font-size: 20px;
-      }
-    }
-
-    .link-text {
-      font-weight: bold;
-    }
-
-    &:hover {
-      background-color: lighten($primary, 35%);
-      box-shadow: 2px 2px 10px 2px lighten($primary, 30%);
-
-      .icon {
-        color: $primary;
-      }
-    }
-  }
-}
-
-//Cards css
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  flex-flow: row wrap;
-  background-color: #f2f2f2;
-  margin-right: -15px;
-  margin-left: -15px;
-  padding: 15px;
-  height: 100%;
-
-  //Title cards section
-  h1 {
-    margin: 15px 0 15px 15px;
-    width: 100%;
-  }
-
-  //One card css
-  .card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: white;
-    box-shadow: 2px 2px 10px 2px #e0e0e0;
-    flex: 1 0 25%;
-    margin: 15px;
-
-    //Imaged card
-    &.card-img {
-      border-radius: 15px;
-
-      .card-img-header {
-        position: relative;
-        max-height: 200px;
-
-        label {
-          position: absolute;
-          z-index: 999;
-          background-color: $tertiary;
-          right: 10px;
-          top: 10px;
-          padding: 3px 10px;
-          color: darken($tertiary, 35);
-          font-weight: bold;
-        }
-      }
-
-      img {
-        border-top-left-radius: 1em;
-        border-top-right-radius: 1em;
-        max-height: 200px;
-        object-fit: cover;
-        width: 100%;
-      }
-
-      .card-content {
-        display: flex;
-        flex-wrap: nowrap;
-        flex-direction: row;
-        padding: 10px;
-        width: 100%;
-
-        hgroup {
-          flex: 0 0 85%;
-        }
-      }
-    }
-
-
-    h2 {
-      font-weight: bold;
-    }
-
-    h3 {
-      font-weight: normal;
-    }
-
-    //Like button (heart)
-    .like {
-      position: relative;
-
-      .hover-icon {
-        display: none;
-      }
-
-      i {
-        font-size: 24px;
-        color: #888888;
-        left: 50%;
-      }
-
-      &:hover {
-        overflow: hidden;
-        cursor: pointer;
-
-        .default-icon {
-          opacity: 0;
-          display: none;
-          transition: all 0.5s 0s ease;
-        }
-
-        .hover-icon {
-          opacity: 1;
-          display: unset;
-          transition: all 0.5s 0s ease;
-          color: $primary;
-        }
-      }
-
-    }
-  }
-}
-
-.home .card {
-  flex: 1 0 0%;
-}
-
-//Menu cards CSS
-.menu {
-  .restaurant-title {
-    width: 100%;
-    position: relative;
-
-    .like {
-      position: absolute;
-      right: 30px;
-      top: 25px;
-
-      .hover-icon {
-        display: none;
-      }
-
-      i {
-        font-size: 24px;
-        color: #888888;
-        left: 50%;
-      }
-
-      &:hover {
-        overflow: hidden;
-        cursor: pointer;
-
-        .default-icon {
-          opacity: 0;
-          display: none;
-          transition: all 0.5s 0s ease;
-        }
-
-        .hover-icon {
-          opacity: 1;
-          display: unset;
-          transition: all 0.5s 0s ease;
-          color: $primary;
-        }
-      }
-    }
-  }
-
-  .cards {
-    background-color: transparent;
-    flex-flow: row wrap;
-    margin-right: 0;
-    margin-left: 0;
-
-
-    h2.sub-title {
-      font-size: 1rem;
-      font-weight: normal;
-      width: 100%;
-
-      &::after {
-        border-bottom: 2px solid #99e2d0;
-        content: "";
-        display: block;
-        width: 40px;
-        padding-top: 3px;
-      }
-    }
-
-    .card {
-      border-radius: 15px;
-      cursor: pointer;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      flex-wrap: nowrap;
-      overflow: hidden;
-
-
-      hgroup {
-        padding: 10px;
-        flex: 1 0 0%;
-      }
-
-      h2 {
-        font-size: 1.125rem;
-        margin: 0 0 5px 0;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
-      }
-
-      h3 {
-        font-size: 1rem;
-        font-weight: normal;
-        color: gray;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
-      }
-
-      .caption-check-box {
-        position: relative;
-        border-top-right-radius: 15px;
-        border-bottom-right-radius: 15px;
-        display: none;
-
-        i {
-          font-size: 24px;
-          color: #fff;
-          transform: rotate(360deg);
-        }
-      }
-
-      .price {
-        font-weight: bold;
-        font-size: 1.125rem;
-        flex: 0 0 auto;
-        text-align: right;
-        padding-right: 10px;
-        display: flex;
-        align-items: center;
-      }
-    }
-  }
-
-  .button1 {
-    background: $btn1-color;
-    color: #fff;
-    border-radius: 25px;
-    border: none;
-    padding: 15px 30px;
-    font-weight: bold;
-    box-shadow: $btn1-shadow;
-  }
-
-  //Order button
-  .order {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-}
-
-footer {
-  padding: 20px;
-  background-color: #333333;
-  text-align: center;
-
-  #footer {
-    max-width: 1680px;
-    margin: auto;
-  }
-
-  .logo {
-
-    img {
-      filter: invert(1);
-    }
-  }
-
-  .col-3 {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .one {
-    flex: 1 0 50%;
-  }
-
-  .footer-icon {
-    i {
-      min-width: 30px;
-    }
-  }
-
-  a {
-    color: #fff !important;
-  }
-}
+@import "_variables";
+@import "_reset";
+@import "_helper";
+@import "_global";
+@import "_animations";
