Fix - placeholder font-weight and colore

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,9 @@ header {
         padding: 15px 10px;
         width: 100%; }
         header .search-location .input-field input[type="text"]::placeholder {
-          font-size: 1rem; }
+          font-size: 1rem;
+          font-weight: bold;
+          color: #333333; }
   header .back-btn {
     position: absolute;
     left: 20px;
