--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -59,6 +59,8 @@ header {
 
         &[type="text"]::placeholder {
           font-size: 1rem;
+          font-weight: bold;
+          color: #333333;
         }
       }
     }
