--- a/assets/scss/media.scss
+++ b/assets/scss/media.scss
@@ -9,15 +9,12 @@
     .cards {
       margin-right: 0;
       margin-left: 0;
-      flex-flow: column;
+      flex-flow: row wrap;
+      align-items: stretch;
 
       > .card {
         margin-bottom: 15px;
         flex: 1 0 33%;
-
-        //hgroup {
-        //  display: grid;
-        //}
       }
     }
   }
@@ -37,10 +34,6 @@
     > .card {
       margin-bottom: 15px;
       flex: 1 0 33%;
-
-      //hgroup {
-      //  display: grid;
-      //}
     }
   }
 }
@@ -98,10 +91,14 @@
 
       h1.shrikhand {
         padding: 30px 10px 20px 15px;
-        font-size: 1.5rem;
+        font-size: 1.75rem;
       }
 
       .cards {
+        h2.sub-title {
+          font-size: 1.25rem;
+        }
+
         .card {
           margin: 10px 0;
           border-radius: 15px;
@@ -109,15 +106,17 @@
           display: flex;
           flex-direction: row;
 
-          //hgroup {
-          //  display: grid;
-          //}
+          &:hover .caption-check-box i {
+            left: 27%;
+          }
         }
       }
     }
   }
 
   aside {
+    margin-top: 25px;
+
     .select {
       display: flex;
       flex-flow: column;
