--- a/assets/scss/_animations.scss
+++ b/assets/scss/_animations.scss
@@ -39,6 +39,40 @@
   }
 }
 
+//Like button (heart)
+.like {
+  position: relative;
+
+  .hover-icon {
+    position: absolute;
+    left: 0;
+    opacity: 0;
+  }
+
+  i {
+    font-size: 24px;
+    color: #888888;
+    left: 50%;
+  }
+
+  &:hover {
+    overflow: hidden;
+    cursor: pointer;
+
+    .default-icon {
+      opacity: 0;
+      transition: all 0.5s 0s ease;
+    }
+
+    .hover-icon {
+      opacity: 1;
+      transition: all 0.5s 0s ease;
+      color: $primary;
+      z-index: 999;
+    }
+  }
+}
+
 // Lazy
 @for $i from 1 through 15 {
   .fade-#{$i} {
