--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,11 +115,11 @@ header {
   position: relative;
   padding-top: 10px; }
   header .header-left {
-    width: 375px; }
+    width: 375px;
+    background-color: #e9e9e9;
+    margin-bottom: 20px; }
   header .search-location {
     display: flex;
-    background-color: #eaeaea;
-    margin-bottom: 20px;
     border-top: 2px solid #e0e0e0; }
     header .search-location .icon-wrapper {
       padding: 8px 10px; }
