--- a/assets/scss/media.scss
+++ b/assets/scss/media.scss
@@ -64,6 +64,7 @@
       justify-content: center;
       padding: 5px;
       margin-bottom: 0;
+      margin-left: 70px;
     }
 
     .cover-img {
@@ -142,5 +143,12 @@
         max-width: 150px;
       }
     }
+  }
+}
+
+@media all and (max-width: 576px) {
+  .menu .cards {
+    flex-direction: column;
+    flex-wrap: nowrap;
   }
 }
