--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -434,7 +434,8 @@ footer {
   animation-iteration-count: 1;
   transform-origin: 50% 50%;
   animation-fill-mode: forwards;
-  overflow: hidden; }
+  overflow: hidden;
+  max-width: 50px; }
   .menu main .cards .card:hover .caption-check-box i {
     position: absolute;
     top: 30%;
