--- a/assets/scss/_animations.scss
+++ b/assets/scss/_animations.scss
@@ -25,6 +25,7 @@
           transform-origin: 50% 50%;
           animation-fill-mode: forwards;
           overflow: hidden;
+          max-width: 50px;
 
           i {
             position: absolute;
