Fix - Scss-lint conformity

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -3,6 +3,7 @@ $primary: #9356dc;
 $secondary: #ff79da;
 $tertiary: #99e2d0;
 $grey-color: #f6f6f6;
+$white-color: #fff;
 
 //Width
 $wrapper: 1440px;
@@ -15,3 +16,4 @@ $btn-padding: 15px 30px;
 
 //Animations
 $card-delay: 0.3s;
+$spiner-bg-bk: rgba(10, 10, 10, 0.60);
