--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,50 +419,50 @@ footer {
   100% {
     transform: rotate(360deg);
     background: #fface8; } }
-.menu main .cards .card:hover hgroup {
+.menu .card:hover hgroup {
   flex: 1;
-  white-space: nowrap;
+  overflow: hidden;
   text-overflow: ellipsis;
-  overflow: hidden; }
-.menu main .cards .card:hover .price {
+  white-space: nowrap; }
+.menu .card:hover .price {
   min-width: 50px; }
-.menu main .cards .card:hover .caption-check-box {
+.menu .card:hover .caption-check-box {
+  animation: caption-check-box ease .3s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
+  background-color: #99e2d0;
   display: block;
   flex: 0 0 15%;
-  background-color: #99e2d0;
-  animation: caption-check-box ease 0.3s;
-  animation-iteration-count: 1;
-  transform-origin: 50% 50%;
-  animation-fill-mode: forwards;
+  max-width: 50px;
   overflow: hidden;
-  max-width: 50px; }
-  .menu main .cards .card:hover .caption-check-box i {
-    position: absolute;
-    top: 30%;
-    left: 30%;
-    animation-iteration-count: 1;
-    animation: check-box ease 0.25s; }
+  transform-origin: 50% 50%; }
+.menu .card:hover .fa-check-circle {
+  animation: check-box ease .25s;
+  animation-iteration-count: 1;
+  left: 27%;
+  position: absolute;
+  top: 30%; }
 
 .like {
   position: relative; }
   .like .hover-icon {
-    position: absolute;
     left: 0;
-    opacity: 0; }
+    opacity: 0;
+    position: absolute; }
   .like i {
+    color: #9d9d9d;
     font-size: 24px;
-    color: #888888;
     left: 50%; }
   .like:hover {
-    overflow: hidden;
-    cursor: pointer; }
+    cursor: pointer;
+    overflow: hidden; }
     .like:hover .default-icon {
       opacity: 0;
-      transition: all 0.5s 0s ease; }
+      transition: all .5s 0s ease; }
     .like:hover .hover-icon {
-      opacity: 1;
-      transition: all 0.5s 0s ease;
       color: #9356dc;
+      opacity: 1;
+      transition: all .5s 0s ease;
       z-index: 999; }
 
 .fade-1 {
@@ -511,49 +511,48 @@ footer {
   animation: fadein 4.5s; }
 
 .loadspinner {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  text-align: center;
-  background-color: rgba(10, 10, 10, 0.6);
   animation: loadspinner 2s;
   animation-delay: 1s;
   animation-fill-mode: both;
+  background-color: rgba(10, 10, 10, 0.6);
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  right: 0;
+  text-align: center;
+  top: 0;
   z-index: 999; }
-  .loadspinner:before {
-    content: "";
-    height: 100%;
+  .loadspinner::before {
+    content: '';
     display: inline-block;
+    height: 100%;
     vertical-align: middle; }
   .loadspinner .spinner-wrapper {
-    display: inline-block;
-    vertical-align: middle;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    position: relative;
-    overflow: hidden;
     border: 5px solid #fff;
-    padding: 10px; }
+    border-radius: 50%;
+    display: inline-block;
+    height: 100px;
+    overflow: hidden;
+    padding: 10px;
+    position: relative;
+    vertical-align: middle;
+    width: 100px; }
     .loadspinner .spinner-wrapper .spinner-cover {
       background: #fff;
-      width: 100%;
-      height: 100%;
       border-radius: 50%;
+      height: 100%;
       position: relative;
+      width: 100%;
       z-index: 2; }
     .loadspinner .spinner-wrapper .spinner-bar {
+      animation: spinner 2s linear infinite;
       background: #ff79da;
-      width: 50%;
+      border-radius: 100% 0 0;
       height: 50%;
+      left: 0;
       position: absolute;
       top: 0;
-      left: 0;
-      border-radius: 100% 0 0 0;
-      -webkit-animation: spinner 2s linear infinite;
       transform-origin: 100% 100%;
-      animation: spinner 2s linear infinite; }
+      width: 50%; }
 
 /*# sourceMappingURL=style.css.map */
