--- a/assets/scss/_animations.scss
+++ b/assets/scss/_animations.scss
@@ -1,74 +1,73 @@
-@import "_keyframes";
+@import 'keyframes';
 
 //Menu cards CSS
-.menu main {
-  .cards {
-    .card {
-      &:hover {
-        hgroup {
-          flex: 1;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          overflow: hidden;
-        }
-
-        .price {
-          min-width: 50px;
-        }
-
-        .caption-check-box {
-          display: block;
-          flex: 0 0 15%;
-          background-color: $tertiary;
-          animation: caption-check-box ease 0.3s;
-          animation-iteration-count: 1;
-          transform-origin: 50% 50%;
-          animation-fill-mode: forwards;
-          overflow: hidden;
-          max-width: 50px;
-
-          i {
-            position: absolute;
-            top: 30%;
-            left: 30%;
-            animation-iteration-count: 1;
-            animation: check-box ease 0.25s;
-          }
-        }
-      }
+.menu {
+  .card:hover {
+    hgroup {
+      flex: 1;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
+
+    .price {
+      min-width: 50px;
+    }
+
+    .caption-check-box {
+      animation: caption-check-box ease .3s;
+      animation-fill-mode: forwards;
+      animation-iteration-count: 1;
+      background-color: $tertiary;
+      display: block;
+      flex: 0 0 15%;
+      max-width: 50px;
+      overflow: hidden;
+      transform-origin: 50% 50%;
+    }
+
+    .fa-check-circle {
+      animation: check-box ease .25s;
+      animation-iteration-count: 1;
+      left: 27%;
+      position: absolute;
+      top: 30%;
+    }
+
   }
+
 }
+
 
 //Like button (heart)
 .like {
   position: relative;
 
   .hover-icon {
-    position: absolute;
     left: 0;
     opacity: 0;
+    position: absolute;
   }
 
   i {
+    color: darken($grey-color, 35);
     font-size: 24px;
-    color: #888888;
     left: 50%;
   }
 
   &:hover {
-    overflow: hidden;
     cursor: pointer;
+    overflow: hidden;
 
     .default-icon {
       opacity: 0;
-      transition: all 0.5s 0s ease;
+      transition: all .5s 0s ease;
     }
 
     .hover-icon {
-      opacity: 1;
-      transition: all 0.5s 0s ease;
       color: $primary;
+      opacity: 1;
+      transition: all .5s 0s ease;
       z-index: 999;
     }
   }
@@ -77,64 +76,63 @@
 // Lazy
 @for $i from 1 through 15 {
   .fade-#{$i} {
-    animation: fadein $card-delay*$i;
+    animation: fadein $card-delay * $i;
   }
 }
 
 
 //Loader
 .loadspinner {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  text-align: center;
-  background-color: rgba(10, 10, 10, 0.60);
   animation: loadspinner 2s;
   animation-delay: 1s;
   animation-fill-mode: both;
+  background-color: $spiner-bg-bk;
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  right: 0;
+  text-align: center;
+  top: 0;
   z-index: 999;
 
-  &:before {
-    content: "";
-    height: 100%;
+  &::before {
+    content: '';
     display: inline-block;
+    height: 100%;
     vertical-align: middle;
   }
 
   .spinner-wrapper {
+    border: 5px solid $white-color;
+    border-radius: 50%;
     display: inline-block;
+    height: 100px;
+    overflow: hidden;
+    padding: 10px;
+    position: relative;
     vertical-align: middle;
     width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    position: relative;
-    overflow: hidden;
-    border: 5px solid #fff;
-    padding: 10px;
 
 
     .spinner-cover {
-      background: #fff;
-      width: 100%;
-      height: 100%;
+      background: $white-color;
       border-radius: 50%;
+      height: 100%;
       position: relative;
+      width: 100%;
       z-index: 2;
     }
 
     .spinner-bar {
+      animation: spinner 2s linear infinite;
       background: $secondary;
-      width: 50%;
+      border-radius: 100% 0 0;
       height: 50%;
+      left: 0;
       position: absolute;
       top: 0;
-      left: 0;
-      border-radius: 100% 0 0 0;
-      -webkit-animation: spinner 2s linear infinite;
       transform-origin: 100% 100%;
-      animation: spinner 2s linear infinite;
+      width: 50%;
     }
   }
 }
