--- a/assets/scss/_helper.scss
+++ b/assets/scss/_helper.scss
@@ -8,28 +8,27 @@
 }
 
 .button1 {
-  display: inline-block;
-  padding: $btn-padding;
-  margin: 0 0.3em 0.3em 0;
-  border-radius: 25px;
-  box-sizing: border-box;
-  text-decoration: none;
-  text-align: center;
-  transition: all 0.2s;
   background: $btn1-color;
-  color: #fff;
-  font-weight: bold;
+  border: 0;
+  border-radius: 25px;
   box-shadow: 2px 2px 10px 2px #e0e0e0;
+  box-sizing: border-box;
+  color: $white-color;
   cursor: pointer;
-  border: none;
+  display: inline-block;
+  font-weight: bold;
+  margin: 0 .3em .3em 0;
+  padding: $btn-padding;
+  text-align: center;
+  text-decoration: none;
+  transition: all .2s;
 
   &:hover {
-    box-shadow: $btn1-shadow-hover;
     background: linear-gradient(lighten($secondary, 5), lighten($primary, 5));
+    box-shadow: $btn1-shadow-hover;
   }
-
 }
 
 a.button1 {
-  color: #fff;
+  color: $white-color;
 }
